tests/error/errors_on_usage/shadow_global1.err
Error: Variable not defined (at $FILE:11:11)
   | 
 9 |     if b:
10 |         x = 1.0
11 |     return x
   |            ^ `x` might be undefined ...
   | 
 9 |     if b:
   |        - ... if this expression is `False`

Guppy compilation failed due to 1 previous error
